[gd_scene load_steps=2 format=3 uid="uid://bofjuj0xdrwpi"]

[ext_resource type="Script" uid="uid://de0s1l6v8s13d" path="res://add_items/add_ship.gd" id="1_pd8ol"]

[node name="Add_ship" type="ScrollContainer"]
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.99
anchor_bottom = 0.99
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="Hull_vbox" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_pd8ol")

[node name="Hulls_name_text_edit" type="TextEdit" parent="Hull_vbox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Введите название корпуса"

[node name="Load_image_button" type="Button" parent="Hull_vbox"]
layout_mode = 2
text = "Загрузить картинку"

[node name="Class_hull_option_button" type="OptionButton" parent="Hull_vbox"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "Фрегат"
popup/item_0/id = 0
popup/item_1/text = "Авианосец "
popup/item_1/id = 1
popup/item_2/text = "Линкор "
popup/item_2/id = 2

[node name="HSeparator2" type="HSeparator" parent="Hull_vbox"]
layout_mode = 2

[node name="Stats_hbox" type="HBoxContainer" parent="Hull_vbox"]
layout_mode = 2

[node name="Point_vbox" type="VBoxContainer" parent="Hull_vbox/Stats_hbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Point_label" type="Label" parent="Hull_vbox/Stats_hbox/Point_vbox"]
layout_mode = 2
text = "Очки"
horizontal_alignment = 1

[node name="Point_text_edit" type="TextEdit" parent="Hull_vbox/Stats_hbox/Point_vbox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3
text = "0"

[node name="HP_vbox" type="VBoxContainer" parent="Hull_vbox/Stats_hbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HP_lable" type="Label" parent="Hull_vbox/Stats_hbox/HP_vbox"]
layout_mode = 2
text = "HP"
horizontal_alignment = 1

[node name="HP_text_edit" type="TextEdit" parent="Hull_vbox/Stats_hbox/HP_vbox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3
text = "0"

[node name="Defense_vbox" type="VBoxContainer" parent="Hull_vbox/Stats_hbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Defense_label" type="Label" parent="Hull_vbox/Stats_hbox/Defense_vbox"]
layout_mode = 2
text = "Защита"
horizontal_alignment = 1

[node name="Defense_text_edit" type="TextEdit" parent="Hull_vbox/Stats_hbox/Defense_vbox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3
text = "0"

[node name="HSeparator3" type="HSeparator" parent="Hull_vbox"]
layout_mode = 2

[node name="Options_hbox" type="HBoxContainer" parent="Hull_vbox"]
layout_mode = 2

[node name="Superheavies_vbox" type="VBoxContainer" parent="Hull_vbox/Options_hbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Superheavy_label" type="Label" parent="Hull_vbox/Options_hbox/Superheavies_vbox"]
layout_mode = 2
text = "Сверхтяжёлое"
horizontal_alignment = 1

[node name="Superheavy_text_edit" type="TextEdit" parent="Hull_vbox/Options_hbox/Superheavies_vbox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3
text = "0"

[node name="Primaries_vbox" type="VBoxContainer" parent="Hull_vbox/Options_hbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Primaries_label" type="Label" parent="Hull_vbox/Options_hbox/Primaries_vbox"]
layout_mode = 2
text = "Основное"
horizontal_alignment = 1

[node name="Primaries_text_edit" type="TextEdit" parent="Hull_vbox/Options_hbox/Primaries_vbox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3
text = "0"

[node name="Auxiliaries_vbox" type="VBoxContainer" parent="Hull_vbox/Options_hbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Auxiliaries_label" type="Label" parent="Hull_vbox/Options_hbox/Auxiliaries_vbox"]
layout_mode = 2
text = "Вспомогательное"
horizontal_alignment = 1

[node name="Auxiliaries_text_edit" type="TextEdit" parent="Hull_vbox/Options_hbox/Auxiliaries_vbox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3
text = "0"

[node name="Options2_hbox" type="HBoxContainer" parent="Hull_vbox"]
layout_mode = 2

[node name="Wings_vbox" type="VBoxContainer" parent="Hull_vbox/Options2_hbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Wings_label" type="Label" parent="Hull_vbox/Options2_hbox/Wings_vbox"]
layout_mode = 2
text = "Крылья"
horizontal_alignment = 1

[node name="Wings_text_edit" type="TextEdit" parent="Hull_vbox/Options2_hbox/Wings_vbox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3
text = "0"

[node name="Escorts_vbox" type="VBoxContainer" parent="Hull_vbox/Options2_hbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Escorts_label" type="Label" parent="Hull_vbox/Options2_hbox/Escorts_vbox"]
layout_mode = 2
text = "Эскорты"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Escorts_text_edit" type="TextEdit" parent="Hull_vbox/Options2_hbox/Escorts_vbox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3
text = "0"

[node name="Systems_vbox" type="VBoxContainer" parent="Hull_vbox/Options2_hbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Systems_label" type="Label" parent="Hull_vbox/Options2_hbox/Systems_vbox"]
layout_mode = 2
text = "Системы"
horizontal_alignment = 1

[node name="Systems_text_edit" type="TextEdit" parent="Hull_vbox/Options2_hbox/Systems_vbox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3
text = "0"

[node name="Discription_text_edit" type="TextEdit" parent="Hull_vbox"]
layout_mode = 2
placeholder_text = "Описание"
wrap_mode = 1
scroll_fit_content_height = true

[node name="HSeparator4" type="HSeparator" parent="Hull_vbox"]
layout_mode = 2

[node name="Feat_vbox" type="VBoxContainer" parent="Hull_vbox"]
layout_mode = 2

[node name="Add_feat_button" type="Button" parent="Hull_vbox/Feat_vbox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Добавить черту"

[node name="Add_hull_button" type="Button" parent="Hull_vbox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Добавить корпус"

[node name="HSeparator" type="HSeparator" parent="Hull_vbox"]
layout_mode = 2

[node name="Hulls_vbox" type="VBoxContainer" parent="Hull_vbox"]
layout_mode = 2

[node name="Exist_hull_button" type="Button" parent="Hull_vbox/Hulls_vbox"]
layout_mode = 2
text = "Название корпуса"
